# rust-road-traffic

./: .gitignore  Cargo.toml
data/: conf.yolov8.toml
python/: converter.py
src/: main.rs
src/lib/detection/: postprocess.rs
src/lib/rest_api/: rest_api.rs  services.rs
src/lib/tracker/: tracker.rs
src/lib/zones/: zones.rs
src/lib/zones/zones/: geojson.rs  geometry.rs
src/settings/: settings.rs
src/video_capture/: frame.rs  video_capture.rs
