[package]
name = "rust-road-traffic"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "rust-road-traffic"
path = "src/main.rs"

[dependencies]
opencv = {version = "0.85.3", features = ['clang-runtime']}
uuid = { version = "1.3.1", features = ["serde", "v4"] }
nalgebra = "0.32.3"
toml = "0.8.2"
toml_edit = "0.20.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
actix-web = "4"
actix-cors = "0.6.2"
actix-web-static-files = "4.0"
static-files = "0.2.1"
ctrlc = { version = "3.0", features = ["termination"] }
redis = "*"
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.1"
mot-rs = "0.1.0"
utoipa = { version = "4.0.0", features = ["actix_extras"] }
utoipa-rapidoc = { version = "1.0.0", features = ["actix-web"] }

[build-dependencies]
static-files = "0.2.1"

[build]
build = "build.rs"
